# lastfm_api_middleware

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  template.env
.github/workflows/: build.yml  lint.yml
lastfm_api_middleware/: lastfm_api.py  main.py
