[tool.poetry]
name = "lastfm-api-middleware"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
requests = "^2.31.0"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
